--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/luxon": "^1.25.0",
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
+    "reset-css": "^5.0.1",
+    "sass": "^1.27.0",
     "typescript": "^4.0.3"
   }
 }
